Fixed some styles and alignments

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,7 @@
+html body {
+  background-color: #fffcf2;
+}
+
 .App {
   text-align: center;
 }
@@ -10,17 +14,16 @@
 
 .App-header {
   background-color: #fffcf2;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
+  margin-top: 5%;
 }
 
 .App-link {
-  /*color: #61dafb;*/
   color: #EB5E28;
 }
 
